# sevorix-lite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  cloudbuild.yaml  docker-compose.yml  install-binary-macos.sh  install-binary.sh  install.sh  policies.json  simulate.ps1
.claude/commands/: pro-feature.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  e2e.yml  publish-lite.yml  release.yml
config/: default_policies.json  default_roles.json
docs/: INTEGRATIONS.md  PTY_MULTIPLEXER_DESIGN.md  SEVORIX_EBPF_ARCHITECTURE.md  e2e-test-scenarios.md  e2e-testing.md
examples/policies/: executable_demo.json
examples/roles/: demo_role.json
infra/: .terraform.lock.hcl  README.md  main.tf  terraform.tfvars.example  variables.tf
scripts/: publish-hub-defaults.sh  sevorix-cgroup-helper  sevorix-claude-launcher  strip_pro_features.py
sevorix-core/: Cargo.toml
sevorix-core/src/: enforcement.rs  input_buffer.rs  lib.rs  pty.rs  pty_multiplexer.rs  seccomp.rs  signing.rs  tracer.rs
sevorix-ebpf/: Cargo.toml  README.md  build.rs
sevorix-ebpf-common/: Cargo.toml
sevorix-ebpf-common/src/: lib.rs
sevorix-ebpf/.cargo/: config.toml
sevorix-ebpf/src/: main.rs
sevorix-hub/: Cargo.toml  Dockerfile  README.md
sevorix-hub/migrations/: 20260224000001_initial.sql  20260224000002_auth_endorsement_visibility.sql  20260226000001_user_approval.sql  20260303000001_email_required_drop_username.sql  20260310000001_artifact_enhancements.sql  20260310000002_signing_keys_and_deps.sql
sevorix-hub/src/: audit.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  signing.rs  store.rs  validation.rs
src/: assets.rs  cli.rs  context.rs  daemon.rs  hooks.rs  hub.rs  lib.rs  logging.rs  main.rs  policy.rs  prime.rs  proxy.rs  scanner.rs  settings.rs  tls.rs
src/builtin_policies/: session_integrity.json
src/integrations/: claude_code.rs  codex.rs  mod.rs  openclaw.rs
static/: desktop.html  index.html  mobile.html
tests/: context_atomic_rewrite.rs  context_compression.rs  context_eviction.rs  context_truncation.rs  e2e_analyze.rs  e2e_cli.rs  e2e_context.rs  e2e_dashboard.rs  e2e_edge_cases.rs  e2e_integrations.rs  e2e_intervention.rs  e2e_layers.rs  e2e_logging.rs  e2e_mitm.rs  e2e_multi_session.rs  e2e_performance.rs  e2e_policy_engine.rs  e2e_proxy.rs  e2e_receipts.rs  e2e_roles.rs  e2e_session_control.rs  e2e_sevsh.rs  e2e_websocket.rs  https_connect.rs  hub_e2e.rs  policy_tests.rs  seccomp_policy.rs
tests/common/: harness.rs  mod.rs  upstream.rs  ws_client.rs
