[workspace]
members = ["sevorix-core", "sevorix-hub", "sevorix-ebpf-common", "sevorix-ebpf"]
resolver = "2"

[package]
name = "sevorix_watchtower"
version = "0.1.0"
edition = "2021"

[features]
default = []
ebpf = ["aya", "zerocopy", "dns-lookup", "dep:sevorix-ebpf-common", "dep:inotify"]
[dependencies]
sevorix-core = { path = "sevorix-core" }
sevorix-ebpf-common = { path = "sevorix-ebpf-common", features = ["user"], optional = true }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "env"] }
rust-embed = "8.0"
directories = "5.0"
daemonize = "0.5"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
libc = "0.2"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1.0.1"
http-body-util = "0.1.3"
uuid = { version = "1.21.0", features = ["v4", "fast-rng"] }
dashmap = "6"
rpassword = "7.3"
url = "2.5"
dialoguer = "0.11"
which = "6.0"

# eBPF dependencies (optional, for ebpf feature)
aya = { version = "0.13", optional = true }
zerocopy = { version = "0.8", optional = true }
dns-lookup = { version = "2.0", optional = true }
inotify = { version = "0.9", optional = true }

[build-dependencies]
aya-build = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"