[package]
name = "sevorix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
nix = { version = "0.28", features = ["process", "ptrace", "signal", "term", "fs"] }
libc = "0.2"
libseccomp = "0.4"
thiserror = "2.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
tempfile = "3.10"