[package]
name = "sevorix-core"
version = "0.1.7"
edition = "2021"

[features]
pro = []

[dependencies]
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = { version = "0.8", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tracing = "0.1"
nix = { version = "0.28", features = ["process", "ptrace", "signal", "term", "fs"] }
libc = "0.2"
thiserror = "2.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }

[target.'cfg(target_os = "linux")'.dependencies]
libseccomp = "0.4"

[dev-dependencies]
tempfile = "3.10"
