[package]
name = "sevorix-ebpf-common"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.13", optional = true }
aya-ebpf = { version = "0.1", optional = true }
zerocopy = { version = "0.8", default-features = false, features = ["derive"], optional = true }

[features]
default = []
user = ["aya", "zerocopy"]
kernel = ["aya-ebpf"]