[package]
name = "sevorix-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "sevorix_hub"
path = "src/lib.rs"

[[bin]]
name = "sevorix-hub"
path = "src/main.rs"

[dependencies]
sevorix-core = { path = "../sevorix-core" }
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
jsonwebtoken = "9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.4", features = ["derive", "env"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
tower_governor = "0.4"
governor = "0.7"
tower = "0.5"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["serde"] }
base64 = "0.22"
regex = "1"
once_cell = "1"
jsonschema = "0.18"

[dev-dependencies]
tempfile = "3"
